src/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name
spec:
  replicas: 3
  selector:
    matchLabels:
      app: release-name
  template:
    metadata:
      labels:
        app: release-name
    spec:
      tolerations:
        - key: "spot-instance"
          operator: "Equal"
          value: "true"
          effect: "NoSchedule"
      securityContext:
        fsGroup: 2000
        runAsNonRoot: true
        runAsUser: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: app
          image: "ghcr.io/isirajieinnocent/time-printer:latest"
          ports:
            - containerPort: 8080
